--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 header {
     background-color: #000000;
     padding: 20px;
-    color: white;
+    color: green;
     text-align: center;
 }
 
@@ -75,7 +75,7 @@ nav ul li a.active {
 }
 
 footer {
-    background-color: #4CAF50;
+    background-color: #000000;
     padding: 10px;
     color: white;
     text-align: center;
