--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     font-family: Arial, sans-serif; /* Fonte padrão */
     font-size: 18px;
 header {
-    background: #ffffff;
-    color: #191970;
+    background: #191970;
+    color: #ffffff;
     padding: 20px 0;
     text-align: center;
 }
