--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ main {
 }
 
 .hero .btn:hover {
-    background: #191970;
+    background: #ffffff;
 }
 
 .features {
@@ -76,7 +76,7 @@ main {
 }
 
 .feature {
-    background: #191970;
+    background: #ffffff
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
