--- a/informações.css
+++ b/informações.css
@@ -75,3 +75,13 @@ h3 {
 }
 
 /* Estilo do rodapé
+footer {
+    text-align: center;
+    padding: 10px 0;
+    background: #ffffff;
+    color: #ffffff;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 20px;
+}
