--- a/contato.css
+++ b/contato.css
@@ -14,7 +14,7 @@ body {
 
 /* Estilo do cabeçalho */
 header {
-    background: #35424a;
+    background: #191970;
     color: #ffffff;
     padding: 20px 0;
 }
