--- a/contato.css
+++ b/contato.css
@@ -95,7 +95,7 @@ main {
 .contato button {
     margin-top: 10px;
     padding: 12px;
-    background-color: #35424a;
+    background-color: #191970;
     color: white;
     border: none;
     border-radius: 
